k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-management-service
  labels:
    app: project-management
spec:
  type: LoadBalancer # Exposes Service externally on AWS EKS or cloud Kubernetes
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: project-management
